# warhammer-app

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  HobbyForge_UX_Design_Audit_and_Improvement_Plan.docx  README.md  ROADMAP.txt  index.html  launch-dev.bat  launch.bat  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_core_schema.sql  002_seed_factions.sql  003_seed_data.sql  004_unit_playbook_stats.sql  005_hobby_journal.sql  006_spend_pence.sql  007_datasheet_link.sql  008_enrichment.sql  009_wishlist.sql  010_hobby_goals.sql  011_point_tiers_loadouts.sql  012_recipe_steps.sql  013_step_photos_alt_paint.sql  014_session_recipe_link.sql  015_sync_errors.sql  016_rules_snapshot.sql  017_unit_overrides.sql  018_recipe_sections.sql  019_rules_favorites_notes.sql  020_workflow_metadata.sql  021_applied_recipe_assignments.sql  022_paintless_steps.sql  023_session_section_fk.sql  024_points_import_history.sql  025_tactical_role.sql  026_unit_rules_mapping.sql  027_battle_log_after_action.sql  028_step_progress_identity.sql  029_synced_point_tiers.sql  030_bsdata_extended.sql  031_army_list_v3.sql  032_army_list_snapshots.sql  033_database_hardening.sql  034_urm_datasheet_name.sql  035_army_list_unit_sort_order.sql  036_unit_form_simplification.sql  037_override_flags.sql  rules_001_schema.sql  rules_002_wargear_abilities.sql  rules_003_sync_meta_counts.sql  (+1 more)
src-tauri/src/: lib.rs  main.rs
(+1961 files in other folders)
